name:           AlignmentAlgorithms
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2013
copyright:      Christian Hoener zu Siederdissen, 2013
homepage:       http://www.tbi.univie.ac.at/~choener/
maintainer:     choener@tbi.univie.ac.at
category:       Algorithms, Data Structures, Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
synopsis:
                Sequence alignment algorithms
description:
                A selection of sequence alignment algorithms.
                .
                Both, global, semi-global, and local alignment algorithms are
                provided. We make use of formal grammar products to
                automatically calculate the dynamic programming grammars and
                signatures.
                .
                .
                Formal background can be found in two papers:
                .
                @
                Christian Höner zu Siederdissen, Ivo L. Hofacker, and Peter F. Stadler
                Product Grammars for Alignment and Folding
                submitted
                @
                .
                and
                .
                @
                Christian Höner zu Siederdissen, Ivo L. Hofacker, and Peter F. Stadler
                How to Multiply Dynamic Programming Algorithms
                Brazilian Symposium on Bioinformatics (BSB 2013)
                Lecture Notes in Bioinformatics 8213, Springer, Heidelberg
                @
                .



Extra-Source-Files:
  README.md
  changelog
  Alignment/NeedlemanWunsch.gra
  Alignment/SmithWaterman.gra

library
  build-depends:
    base >= 4 && < 5
  exposed-modules:
    Alignment.NeedlemanWunsch
    Alignment.SmithWaterman

  ghc-options:
    -O2 -funbox-strict-fields

source-repository head
  type: git
  location: git://github.com/choener/AlignmentAlgorithms

