name:           AlignmentAlgorithms
version:        0.0.1.0
author:         Christian Hoener zu Siederdissen, 2013-2015
copyright:      Christian Hoener zu Siederdissen, 2013-2015
homepage:       http://www.tbi.univie.ac.at/~choener/
maintainer:     choener@bioinf.uni-leipzig.de
category:       Algorithms, Data Structures, Bioinformatics, Linguistics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
synopsis:
                Sequence alignment algorithms
description:
                A selection of sequence alignment algorithms.
                .
                * global alignment (Needleman-Wunsch style)
                .
                .
                .
                Formal background can be found in two papers:
                .
                @
                Christian Höner zu Siederdissen, Ivo L. Hofacker, and Peter F. Stadler
                Product Grammars for Alignment and Folding
                submitted
                @
                .
                and
                .
                @
                Christian Höner zu Siederdissen, Ivo L. Hofacker, and Peter F. Stadler
                How to Multiply Dynamic Programming Algorithms
                Brazilian Symposium on Bioinformatics (BSB 2013)
                Lecture Notes in Bioinformatics 8213, Springer, Heidelberg
                @
                .



Extra-Source-Files:
  README.md
  changelog

--  Alignment/NeedlemanWunsch.gra
--  Alignment/SmithWaterman.gra

library
  build-depends: base             >= 4        && < 5
               , containers       == 0.5.*
               , vector           == 0.10.*
               , ADPfusion        == 0.4.0.*
               , FormalGrammars   == 0.2.0.*
               , GrammarProducts  == 0.1.0.*
               , PrimitiveArray   == 0.6.0.*
  exposed-modules:
    DP.Alignment.Global.Tapes2
--    Alignment.NeedlemanWunsch
--    Alignment.SmithWaterman
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , TypeFamilies
                    , TemplateHaskell
                    , QuasiQuotes
                    , FlexibleContexts
  ghc-options:
    -O2 -funbox-strict-fields

source-repository head
  type: git
  location: git://github.com/choener/AlignmentAlgorithms

